# flat-base

./: .gitattributes  .gitignore  .vale.ini  README.md  cabal.project  flake.nix
.config/: mustache.yaml  mustache.yaml-e
.config/flake/: outputs.nix
.config/project/: default.nix
.github/: settings.yml
.github/workflows/: build.yml
core/: CHANGELOG.md  README.md  flat-base.cabal
core/src/: Foreign.hs  Numeric.hs  Prelude.hs
core/src/Control/: Applicative.hs  Arrow.hs  Category.hs  Concurrent.hs  Exception.hs  Monad.hs
core/src/Control/Concurrent/: Chan.hs  MVar.hs  QSem.hs  QSemN.hs
core/src/Control/Exception/: Base.hs
core/src/Control/Monad/: Fail.hs  ST.hs  Zip.hs
core/src/Control/Monad/IO/: Class.hs
core/src/Control/Monad/ST/: Lazy.hs  Safe.hs  Strict.hs  Unsafe.hs
core/src/Control/Monad/ST/Lazy/: Safe.hs  Unsafe.hs
core/src/Data/: Bifunctor.hs  Bits.hs  Bool.hs  Char.hs  Coerce.hs  Dynamic.hs  Either.hs  Eq.hs  Fixed.hs  Function.hs  Functor.hs  IORef.hs  Int.hs  Kind.hs  Maybe.hs  Monoid.hs  Ord.hs  Proxy.hs  Ratio.hs  STRef.hs  Semigroup.hs  String.hs  Tuple.hs  Typeable.hs  Unique.hs  Void.hs  Word.hs
core/src/Data/Functor/: Compose.hs  Const.hs  Contravariant.hs  Identity.hs  Product.hs  Sum.hs
core/src/Data/STRef/: Lazy.hs  Strict.hs
core/src/Data/Type/: Bool.hs  Coercion.hs  Equality.hs  Ord.hs
core/src/Debug/: Trace.hs
core/src/Foreign/: C.hs  Concurrent.hs  ForeignPtr.hs  Marshal.hs  Ptr.hs  Safe.hs  StablePtr.hs  Storable.hs
core/src/Foreign/C/: ConstPtr.hs  Error.hs  String.hs  Types.hs
core/src/Foreign/ForeignPtr/: Safe.hs  Unsafe.hs
core/src/Foreign/Marshal/: Alloc.hs  Array.hs  Error.hs  Pool.hs  Safe.hs  Unsafe.hs  Utils.hs
core/src/GHC/: Base.hs  Bits.hs  ByteOrder.hs  Char.hs  Classes.hs  Conc.hs  Desugar.hs  Err.hs  Event.hs  Exception.hs  ExecutionStack.hs  Exts.hs  Fingerprint.hs  Float.hs  Foreign.hs  ForeignPtr.hs  Generics.hs  IO.hs  IOArray.hs  IORef.hs  Int.hs  MVar.hs  Magic.hs  Maybe.hs  Natural.hs  Num.hs  OverloadedLabels.hs  Profiling.hs  Ptr.hs  Real.hs  Records.hs  ST.hs  STRef.hs  Show.hs  Stable.hs  Stack.hs  StaticPtr.hs  Stats.hs  Storable.hs  TopHandler.hs  (+6 more)
core/src/GHC/Conc/: IO.hs  Signal.hs  Sync.hs
core/src/GHC/Exception/: Type.hs
core/src/GHC/Float/: ConversionUtils.hs  RealFracMethods.hs
core/src/GHC/IO/: Buffer.hs  BufferedIO.hs  Device.hs  Encoding.hs  Exception.hs  FD.hs  Handle.hs  IOMode.hs  StdHandles.hs  SubSystem.hs  Unsafe.hs
core/src/GHC/IO/Encoding/: Latin1.hs  Types.hs  UTF16.hs  UTF32.hs  UTF8.hs
core/src/GHC/IO/Handle/: FD.hs  Text.hs  Types.hs
core/src/GHC/RTS/: Flags.hs
core/src/GHC/Stack/: CCS.hs  Types.hs
core/src/Numeric/: Natural.hs
core/src/System/: CPUTime.hs  Environment.hs  Exit.hs  IO.hs  Info.hs  Mem.hs  Timeout.hs
core/src/System/Environment/: Blank.hs
core/src/System/IO/: Error.hs  Unsafe.hs
core/src/System/Mem/: StableName.hs  Weak.hs
core/src/System/Posix/: Internals.hs  Types.hs
core/src/Text/: Show.hs
core/src/Text/Show/: Functions.hs
core/src/Type/: Reflection.hs
core/src/Type/Reflection/: Unsafe.hs
core/src/Unsafe/: Coerce.hs
core/tests/: doctests.hs
