cabal-version: 3.0
-- ^ Cabal 3.0 is the first with the `Universal-FOSS-exception-1.0` SPDX license
--   exception.

name: flat-base
version: 0.0.1.0
synopsis: base without recursion
description:
  This is the base library, but with everything that involves recursion stripped
  out.
maintainer: Greg Pfeil <greg@technomadic.org>
author: Greg Pfeil <greg@technomadic.org>
copyright: 2025 Greg Pfeil
-- TODO: Remove the redundant `OR AGPL-3.0-only` once
--       haskell/hackage-server#1440 is fixed.
license: AGPL-3.0-only WITH Universal-FOSS-exception-1.0 OR AGPL-3.0-only OR LicenseRef-commercial
license-files:
  LICENSE
  LICENSE.AGPL-3.0-only
  LICENSE.Universal-FOSS-exception-1.0
  LICENSE.commercial
category:
build-type: Custom
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/*.md
tested-with:
  GHC == {
    7.10.3,
    8.0.2,
    8.2.2,
    8.4.1,
    8.6.1,
    8.8.1,
    8.10.1,
    9.0.1,
    9.2.1,
    9.4.1, 9.4.8,
    9.6.1, 9.6.7,
    9.8.1, 9.8.4,
    9.10.1, 9.10.2, 9.10.3,
    9.12.1, 9.12.2,
    9.14.1
  }

homepage: https://github.com/sellout/flat-base#readme
bug-reports: https://github.com/sellout/flat-base/issues

source-repository head
  type: git
  location: https://github.com/sellout/flat-base.git
  subdir: core

source-repository this
  type: git
  location: https://github.com/sellout/flat-base.git
  subdir: core
  -- NB: This is the repo version, which is distinct from the package version.
  tag: v0.1.0

custom-setup
  setup-depends:
    -- TODO: Due to haskell/cabal#3751, `Cabal` has to be specified even though
    --       there’s no direct dependency. Its lower bound needs to be at least
    --       as high as `cabal-version` at the top of this file, and Hackage
    --       requires it to have _some_ upper bound. (Since there’s no direct
    --       dependency, it doesn’t use PVP bounds.)
    --
    -- TODO: Due to haskell/cabal#9375, 3.10.3 is required in order to load
    --       plugins from a `ghc-options` field. Unfortunately, GHCs prior to
    --       9.8.3 include an older Cabal, so a newer one may need to be
    --       manually installed.
    Cabal >= 3.10.3 && < 99,
    base ^>= {4.8.2, 4.9.0, 4.10.0, 4.11.0, 4.12.0, 4.13.0, 4.14.0, 4.15.0, 4.16.0, 4.17.0, 4.18.0, 4.19.0, 4.20.0, 4.21.0},
    cabal-doctest ^>= {1.0.0},

flag noisy-deprecations
  description:
    Prior to GHC 9.10, the @DEPRECATED@ pragma can’t distinguish between terms
    and types. Consenquently, you can get spurious warnings when there’s a name
    collision and the name in the other namespace is deprecated. Or you can
    choose to not get those warnings, at the risk of not being warned when
    there’s a name collision and the namespace you’re referencing is the one
    that’s deprecated.
  default: True
  -- Because disabling this flag won’t help the solver.
  manual: True

flag verify-no-recursion
  description:
    Compile with "NoRecursion" enabled. This is intended for developers of this
    package.
  default: False
  -- Because disabling this flag won’t help the solver.
  manual: True

-- This mimics the GHC2024 extension
-- (https://ghc.gitlab.haskell.org/ghc/doc/users_guide/exts/control.html?highlight=doandifthenelse#extension-GHC2024),
-- but supporting compilers back to GHC 7.10. If the oldest supported compiler
-- is GHC 9.10, then this stanza can be removed and `import: GHC2024` can be
-- replaced by `default-language: GHC2024`. If the oldest supported compiler is
-- GHC 9.2, then this can be simplified by setting `default-language: GHC2021`
-- and only including the extensions added by GHC2024.
common GHC2024
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    -- DeriveLift -- uncomment if the oldest supported version is GHC 8.10.1+
    DeriveTraversable
    -- DerivingStrategies -- uncomment if the oldest supported version is GHC 8.2.1+
    DisambiguateRecordFields
    DoAndIfThenElse
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    -- HexFloatLiterals -- uncomment if the oldest supported version is GHC 8.4.1+
    -- ImportQualifiedPost -- uncomment if the oldest supported version is GHC 8.10.1+
    InstanceSigs
    LambdaCase
    MagicHash
    MonadComprehensions
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    -- NumericUnderscores -- uncomment if the oldest supported version is GHC 8.6.1+
    PolyKinds
    PostfixOperators
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    -- StandaloneKindSignatures -- uncomment if the oldest supported version is GHC 8.10.1+
    TupleSections
    -- TypeApplications -- uncomment if the oldest supported version is GHC 8.0.1+
    TypeOperators
    UnicodeSyntax

common defaults
  import: GHC2024
  build-depends:
    ghc-compat-plugin ^>= {0.1.0},
  ghc-options:
    -Weverything
    -- This one just reports unfixable things, AFAICT.
    -Wno-all-missed-specialisations
    -- Type inference good.
    -Wno-missing-local-signatures
    -- Warns even when `Unsafe` is explicit, not inferred. See
    -- https://gitlab.haskell.org/ghc/ghc/-/issues/16689
    -Wno-unsafe
    -- Re-export library uses `(..)` intentionally.
    -Wno-missing-import-lists
    -fplugin GhcCompat
    -fplugin-opt GhcCompat:minVersion=7.10.1
    -fplugin-opt GhcCompat:reportIncompatibleExtensions=error
  if impl(ghc >= 8.6.1)
    ghc-options:
      -- remove if oldest supported version is GHC 8.6.1
      -Wno-star-is-type
  if impl(ghc >= 8.8.1)
    ghc-options:
      -- remove if oldest supported version is GHC 8.2.1
      -Wno-missing-deriving-strategies
  else
    ghc-options:
      -- This used to warn even when `Safe` was explicit.
      -Wno-safe
  default-extensions:
    -- BlockArguments - uncomment if the oldest supported version is GHC 8.6.1+
    DefaultSignatures
    ExplicitNamespaces
    FunctionalDependencies
    LiberalTypeSynonyms
    -- replace with `LexicalNegation` if the oldest supported version is GHC 9.0.1+
    NegativeLiterals
    PackageImports
    ParallelListComp
    -- QualifiedDo - uncomment if the oldest supported version is GHC 9.0.1+
    RecursiveDo
    -- RequiredTypeArguments - uncomment if the oldest supported version is GHC 9.10.1+
    -- StrictData - uncomment if the oldest supported version is GHC 8.0.1+
    -- TemplateHaskellQuotes - uncomment if the oldest supported version is GHC 8.0.1+
    TransformListComp
    NoGeneralizedNewtypeDeriving
    NoImplicitPrelude
    NoMonomorphismRestriction
    NoPatternGuards
    -- NoStarIsType - uncomment if the oldest supported version is GHC 8.6.1+
    -- NoTypeApplications - uncomment if the oldest supported version is GHC 8.0.1+
  if flag(noisy-deprecations)
    cpp-options:
      -DSELLOUT_NOISY_DEPRECATIONS
  if flag(verify-no-recursion)
    build-depends:
      no-recursion,
    ghc-options:
      -fplugin=NoRecursion

library
  import: defaults
  hs-source-dirs:
    src
  build-depends:
    base ^>= {4.8.2, 4.9.0, 4.10.0, 4.11.0, 4.12.0, 4.13.0, 4.14.0, 4.15.0, 4.16.0, 4.17.0, 4.18.0, 4.19.0, 4.20.0, 4.21.0},
  exposed-modules:
    Control.Applicative
    Control.Arrow
    Control.Category
    Control.Concurrent
    Control.Concurrent.Chan
    Control.Concurrent.MVar
    Control.Concurrent.QSem
    Control.Concurrent.QSemN
    Control.Exception
    Control.Exception.Base
    Control.Monad
    Control.Monad.Fail
    Control.Monad.IO.Class
    Control.Monad.ST
    Control.Monad.ST.Lazy
    Control.Monad.ST.Lazy.Safe
    Control.Monad.ST.Lazy.Unsafe
    Control.Monad.ST.Safe
    Control.Monad.ST.Strict
    Control.Monad.ST.Unsafe
    Control.Monad.Zip
    Data.Bifunctor
    Data.Bits
    Data.Bool
    Data.Char
    Data.Coerce
    Data.Dynamic
    Data.Either
    Data.Eq
    Data.Fixed
    Data.Function
    Data.Functor
    Data.Functor.Compose
    Data.Functor.Const
    Data.Functor.Contravariant
    Data.Functor.Identity
    Data.Functor.Product
    Data.Functor.Sum
    Data.IORef
    Data.Int
    Data.Kind
    Data.Maybe
    Data.Monoid
    Data.Ord
    Data.Proxy
    Data.Ratio
    Data.STRef
    Data.STRef.Lazy
    Data.STRef.Strict
    Data.Semigroup
    Data.String
    Data.Tuple
    Data.Type.Bool
    Data.Type.Coercion
    Data.Type.Equality
    Data.Type.Ord
    Data.Typeable
    Data.Unique
    Data.Void
    Data.Word
    Debug.Trace
    Foreign
    Foreign.C
    Foreign.C.ConstPtr
    Foreign.C.Error
    Foreign.C.String
    Foreign.C.Types
    Foreign.Concurrent
    Foreign.ForeignPtr
    Foreign.ForeignPtr.Safe
    Foreign.ForeignPtr.Unsafe
    Foreign.Marshal
    Foreign.Marshal.Alloc
    Foreign.Marshal.Array
    Foreign.Marshal.Error
    Foreign.Marshal.Pool
    Foreign.Marshal.Safe
    Foreign.Marshal.Unsafe
    Foreign.Marshal.Utils
    Foreign.Ptr
    Foreign.Safe
    Foreign.StablePtr
    Foreign.Storable
    GHC.Base
    GHC.Bits
    GHC.ByteOrder
    GHC.Char
    GHC.Classes
    GHC.Conc
    GHC.Conc.IO
    GHC.Conc.Signal
    GHC.Conc.Sync
    GHC.Desugar
    GHC.Err
    GHC.Event
    GHC.Exception
    GHC.Exception.Type
    GHC.ExecutionStack
    GHC.Exts
    GHC.Fingerprint
    GHC.Float
    GHC.Float.ConversionUtils
    GHC.Float.RealFracMethods
    GHC.Foreign
    GHC.ForeignPtr
    GHC.Generics
    GHC.IO
    GHC.IO.Buffer
    GHC.IO.BufferedIO
    GHC.IO.Device
    GHC.IO.Encoding
    GHC.IO.Encoding.Latin1
    GHC.IO.Encoding.Types
    GHC.IO.Encoding.UTF16
    GHC.IO.Encoding.UTF32
    GHC.IO.Encoding.UTF8
    GHC.IO.Exception
    GHC.IO.FD
    GHC.IO.Handle
    GHC.IO.Handle.FD
    GHC.IO.Handle.Text
    GHC.IO.Handle.Types
    GHC.IO.IOMode
    GHC.IO.StdHandles
    GHC.IO.SubSystem
    GHC.IO.Unsafe
    GHC.IOArray
    GHC.IORef
    GHC.Int
    GHC.MVar
    GHC.Magic
    GHC.Maybe
    GHC.Natural
    GHC.Num
    GHC.OverloadedLabels
    GHC.Profiling
    GHC.Ptr
    GHC.RTS.Flags
    GHC.Real
    GHC.Records
    GHC.ST
    GHC.STRef
    GHC.Show
    GHC.Stable
    GHC.Stack
    GHC.Stack.CCS
    GHC.Stack.Types
    GHC.StaticPtr
    GHC.Stats
    GHC.Storable
    GHC.TopHandler
    GHC.TypeLits
    GHC.TypeNats
    GHC.Types
    GHC.Unicode
    GHC.Weak
    GHC.Word
    Numeric
    Numeric.Natural
    Prelude
    System.CPUTime
    System.Environment
    System.Environment.Blank
    System.Exit
    System.IO
    System.IO.Error
    System.IO.Unsafe
    System.Info
    System.Mem
    System.Mem.StableName
    System.Mem.Weak
    System.Posix.Internals
    System.Posix.Types
    System.Timeout
    Text.Show
    Text.Show.Functions
    Type.Reflection
    Type.Reflection.Unsafe
    Unsafe.Coerce

test-suite doctests
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is: doctests.hs
  build-depends:
    doctest,
    flat-base,
  if impl(ghc >= 8.10.1)
    ghc-options:
      -- `doctest` requires the package containing the doctests as a dependency
      -- to ensure it gets built before this test-suite, even though the package
      -- appears to be unused.
      -Wno-unused-packages
  -- TODO: The sections below here are necessary because we don’t have control
  --       over the generated `Build_doctests.hs` file. So we have to silence
  --       all of its warnings one way or another.
  if impl(ghc >= 8.0.1)
    ghc-options:
      -Wno-missing-import-lists
      -Wno-safe
  else
    ghc-options:
      -fno-warn-missing-import-lists
  if impl(ghc >= 8.4.1)
    ghc-options:
      -Wno-missing-export-lists
  if impl(ghc >= 8.8.1)
    ghc-options:
      -Wno-missing-deriving-strategies
  default-extensions:
    -- Since we can’t add `{-# LANGUAGE Safe -#}` to the generated
    -- “Build_doctests.hs”, we set it here, and that means it has to match
    -- doctests.hs, which is `Unsafe`.
    Unsafe
